# DetectArmor-ros-

./: README.md
.cache/clangd/index/: ArmorDetectNode.cpp.3439AC4A03A09E91.idx  ArmorDetectNode.cpp.9182BF8DE6558CD5.idx  ArmorDetectNode.cpp.C6F46521E8241BA7.idx  ArmorDetectNode.h.9BB773D0C0E0FCE9.idx  ArmorDetectNode.h.EEB7A3035E44D15E.idx  ArmorDetectNode.h.FF6F7219A8D21D45.idx  ArmorTracker.cpp.CFA58D3B22871076.idx  ArmorTrackerNode.cpp.2D55B4DFE7D093C9.idx  ArmorTrackerNode.cpp.C0529ED328124D3B.idx  ArmorTrackerNode.h.005447E635D2D21F.idx  ArmorTrackerNode.h.F7181B9D1B63C48E.idx  Ekf.hpp.09FBF6958658360D.idx  Ekf.hpp.FFCD27A91D59CFC0.idx  HikDriver.cpp.2D8F52F2E743CCCF.idx  HikDriver.cpp.75D0EEFF93671C16.idx  HikDriver.cpp.7C55EA474A606EAF.idx  HikDriver.h.7D8427CB8A365329.idx  HikDriver.h.8E6ABBE460DB1B12.idx  HikDriver.h.8F260890688324F3.idx  ImageSubscriberNode.cpp.0ED46A2CECFF8BBD.idx  ImageSubscriberNode.cpp.2B98106C8C4DFEE2.idx  ImageSubscriberNode.cpp.9CD0799E5F851171.idx  ImageSubscriberNode.cpp.EE899183FAFD2ACB.idx  PnPslover.cpp.8579FB367700D444.idx  PnPslover.cpp.ADB3D636F043CF41.idx  PnPslover.cpp.E465ABEFED426DFC.idx  PnPslover.h.B160496FDCAC29A0.idx  PnPslover.h.B410C12BE5017D98.idx  PnPslover.h.E34D97DDB9F305A8.idx  VideoReaderNode.cpp.0EEE5E55748420B1.idx  armor.hpp.5E73D9A69ED3FFC0.idx  armor.hpp.D5FA955108A2D924.idx  armor.hpp.F25F651E7CF6FD1F.idx  armor__builder.hpp.7E4379B48F8303B9.idx  armor__builder.hpp.814B4B132DA618CF.idx  armor__builder.hpp.BBA829DDEE6DDE13.idx  armor__struct.hpp.2458C2783B118F66.idx  armor__struct.hpp.26A567DB558667DA.idx  armor__struct.hpp.F360D00728A7E7B2.idx  armor__traits.hpp.3F974C9EDB880991.idx  (+42 more)
install/: local_setup.sh  setup.sh
install/armor_detect/include/: ArmorDetectNode.h  ImageSubscriberNode.hpp  detect.h
install/armor_detect/lib/armor_detect/: armor_detect_node  video_reader_node
install/armor_detect/share/ament_index/resource_index/parent_prefix_path/: armor_detect
install/armor_detect/share/ament_index/resource_index/rclcpp_components/: armor_detect
install/armor_detect/share/armor_detect/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh  package.xml
install/armor_detect/share/armor_detect/cmake/: ament_cmake_export_include_directories-extras.cmake
install/armor_detect/share/armor_detect/launch/: detect_nodes_launch.py
install/armor_interfaces/include/armor_interfaces/armor_interfaces/msg/detail/: armor__struct.h  armor__struct.hpp  armor__type_support.c  armor__type_support.cpp
install/armor_interfaces/share/armor_interfaces/: local_setup.sh  package.sh
install/armor_tracker/include/: ArmorTrackerNode.h  Ekf.hpp
install/armor_tracker/lib/armor_tracker/: armor_tracker_node
install/armor_tracker/share/armor_tracker/: local_setup.sh  package.sh  package.xml
install/auto_aim/share/auto_aim/: package.dsv  package.ps1  package.sh  package.xml
install/auto_aim/share/auto_aim/config/: auto_aim_params.yaml
install/auto_aim/share/auto_aim/launch/: translation_armor.launch.py
install/hik_camera/include/: hik_camera_setup.h
install/hik_camera/lib/hik_camera/: hik_camera_node
install/hik_camera/share/ament_index/resource_index/package_run_dependencies/: hik_camera
install/hik_camera/share/hik_camera/: local_setup.sh  package.sh
install/hik_camera/share/hik_camera/launch/: hik_camera.launch.py
install/image_subscriber/lib/image_subscriber/: image_subscriber_node
install/image_subscriber/share/ament_index/resource_index/package_run_dependencies/: image_subscriber
install/image_subscriber/share/image_subscriber/: local_setup.sh  package.sh  package.xml
install/image_subscriber/share/image_subscriber/cmake/: image_subscriberConfig.cmake
install/video_reader/lib/video_reader/: video_reader_node
install/video_reader/share/video_reader/: local_setup.dsv  local_setup.sh  package.dsv  package.ps1  package.sh
log/: latest_build
src/ArmorDetect/: CMakeLists.txt
src/ArmorDetect/HikDriver/: CMakeLists.txt
src/ArmorDetect/HikDriver/include/HikDriver/: HikDriver.h
src/ArmorDetect/include/: ArmorDetectNode.h  PnPslover.h
src/ArmorDetect/src/ArmorDetectNode/: ArmorDetectNode.cpp  VideoReaderNode.cpp
src/ArmorDetect/src/Pnpslover/: PnPslover.cpp
src/ArmorDetect/src/detectArmor/: findArmor.cpp  findLightBar.cpp  imageDetect.cpp  imageDispose.cpp  matchingArmor.cpp  matchingLightBar.cpp  setThreshold.cpp
src/ArmorDetect/src/getImage/: getImage.cpp
src/ArmorTracker/: CMakeLists.txt
src/ArmorTracker/include/: ArmorTrackerNode.h  Ekf.hpp
src/ArmorTracker/src/: ArmorTrackerNode.cpp
src/ImageSubscriber/: CMakeLists.txt
src/ImageSubscriber/src/: ImageSubscriberNode.cpp
src/auto_aim/: CMakeLists.txt
src/auto_aim/config/: auto_aim_params.yaml  tracker.yaml
src/auto_aim/launch/: translation_armor.launch.py
src/hik_camera/: CMakeLists.txt
src/hik_camera/config/: camera_params.yaml
src/hik_camera/include/: hik_camera_node.h
src/hik_camera/src/: hik_camera_node.cpp  hik_camera_setup.cpp
src/video_reader/: CMakeLists.txt
src/video_reader/src/: video_reader_node.cpp
