<?xml version="1.0"?>
<package format="3">
  <name>image_subscriber</name>
  <version>0.1.0</version>
  <description>ROS 2 package to subscribe to video_frames topic and display images</description>

  <maintainer email="zhangjiaqi20060701@gmail.com">zjq</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>OpenCV</exec_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>OpenCV</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
